# cpomdp

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  cspell.json  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.md  index.md
docs/api/: agent.md  backends.md  control.md  dynamics.md  efe.md  model.md  observation.md  selection.md  structure.md
docs/guides/: step-by-step.md
examples/: README.md  bacillus_lqr.py  bacillus_seeking_food.py  bacillus_uncertain_food.py  coupling_graph_figure.py
spikes/chapter8_information_rate/: SPIKE.md  TODOS.md  demo_information_rate.py
src/cpomdp/: __init__.py  _validation.py  agent.py  control.py  efe.py  observation.py  selection.py  structure.py  types.py
src/cpomdp/backends/: base.py  coupling.py  kalman.py  rxinfer.py
src/cpomdp/ffg/: __init__.py  chain.py  graph.py  message.py
src/cpomdp/ffg/factors/: __init__.py  linear_gaussian.py
tests/: test_agent.py  test_control.py  test_double_integrator_horizon.py  test_efe.py  test_efe_selector_horizon.py  test_efe_step.py  test_ffg_backend.py  test_ffg_chain.py  test_ffg_factors.py  test_ffg_message.py  test_ffg_tree.py  test_kalman.py  test_policy_efe.py  test_rxinfer.py  test_selection.py  test_structure.py  test_types.py
