[project]
name = "cpomdp"
version = "0.1.0.dev0"
description = "Continuous active inference for Python — the continuous-state sibling of pymdp."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "DanBoringName", email = "130509178+DanBoringName@users.noreply.github.com" }]
keywords = ["active-inference", "pomdp", "kalman", "bayesian", "control"]
classifiers = [
    # No "License ::" classifier: PEP 639 forbids pairing it with the SPDX
    # `license` expression above, and PyPI rejects the upload if both appear.
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/DanBoringName/cpomdp"
Repository = "https://github.com/DanBoringName/cpomdp"

[project.optional-dependencies]
# The RxInfer (Julia) backend. Optional so the pure-Python parts install without Julia.
rxinfer = ["juliacall>=0.9.20"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpomdp"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "rxinfer: tests that require the RxInfer/Julia backend (deselect with '-m \"not rxinfer\"')",
]
