[project]
name = "cpomdp"
version = "0.2.0"
description = "Continuous active inference for Python — the continuous-state sibling of pymdp."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "DanBoringName"}]
keywords = ["active-inference", "pomdp", "kalman", "bayesian", "control"]
classifiers = [
    # No "License ::" classifier: PEP 639 forbids pairing it with the SPDX
    # `license` expression above, and PyPI rejects the upload if both appear.
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4",
    "jaxtyping>=0.3.7",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/DanBoringName/cpomdp"
Repository = "https://github.com/DanBoringName/cpomdp"

[project.optional-dependencies]
# The RxInfer (Julia) backend. Optional so the pure-Python parts install without Julia.
rxinfer = ["juliacall>=0.9.20"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.15.3",
    "pre-commit>=4.0",
]
# Documentation site (MkDocs + Material + mkdocstrings). API pages are generated
# from the Google-style docstrings. Build with `uv run --group docs mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpomdp"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PT",   # flake8-pytest-style
    "PIE",  # flake8-pie
    "ICN",  # flake8-import-conventions (e.g. `import numpy as np`)
    "TID",  # flake8-tidy-imports
    "PERF", # perflint
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle — require docstrings on the public API (see per-file-ignores)
]
ignore = [
    # The docstrings and comments use real mathematical notation (−, ×, ∞, Aᵀ).
    # These rules flag those glyphs as "ambiguous" unicode; here they're deliberate
    # and correct, so the warning is just noise.
    "RUF001",
    "RUF002",
    "RUF003",
    # Constructors are documented at the class level (the Args sections live in the
    # class docstrings), so an extra __init__ docstring would just duplicate them.
    "D107",
    # jaxtyping shape strings (Float64[Array, "n n"]) read as forward annotations to
    # pyflakes/pyupgrade: they can't parse the axes (F722), read a single axis as an
    # undefined name (F821), or want to strip the "quotes" (UP037, which would break
    # the shape). All false positives; ty catches genuine undefined-name errors.
    "F722",
    "F821",
    "UP037",
]
# Deliberately not enabled: PL* — magic-value / arg-count / lazy-import warnings all
# fire on legitimate numerical code and the intentional lazy Julia import.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"jax.numpy" = "jnp"

[tool.ruff.lint.per-file-ignores]
# Tests document themselves by name; don't require docstrings on them.
"tests/**" = ["D"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "rxinfer: tests that require the RxInfer/Julia backend (deselect with '-m \"not rxinfer\"')",
]
